[package]
name = "hc_utils"
version = "0.2.0"
authors = ["zo-el <joel.ulahanna@holo.host>"]
edition = "2018"

[dependencies]
serde = "=1.0.123"
hdk = {git = "https://github.com/holochain/holochain.git", rev = "8d6c4cd29bd17e8224aeffb87dc03eaf3ff33508", package = "hdk"}
holo_hash = { git = "https://github.com/holochain/holochain.git", rev = "8d6c4cd29bd17e8224aeffb87dc03eaf3ff33508", package = "holo_hash" }
#holo_hash = "0.0.2-alpha.1"
thiserror = "1.0.22"

[lib]
name = "hc_utils"
path = "src/lib.rs"
# "cargo test --doc" doctests are not performed with the "cdylib" crate-type
crate-type = ["cdylib", "rlib"]
