[package]
name = "hc_utils"
version = "0.2.0"
authors = ["zo-el <joel.ulahanna@holo.host>"]
edition = "2018"

[dependencies]
serde = "=1.0.123"
hdk = {git = "https://github.com/holochain/holochain.git", rev = "4a2e8911c73dbbe693d040acf8410862e31c3582", package = "hdk"}
holo_hash = { git = "https://github.com/holochain/holochain.git", rev = "4a2e8911c73dbbe693d040acf8410862e31c3582", package = "holo_hash" }
#holo_hash = "0.0.2-alpha.1"
thiserror = "1.0.22"

[lib]
name = "hc_utils"
path = "src/lib.rs"
# "cargo test --doc" doctests are not performed with the "cdylib" crate-type
crate-type = ["cdylib", "rlib"]
